fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -222,5 +222,6 @@ section.program-details {
 @media (max-width: 75em) {
   html {
     font-size: 56.25%;
+    overflow-x: hidden;
   }
 }
